--- a/includes/device_trackers.yaml
+++ b/includes/device_trackers.yaml
@@ -1,6 +1,7 @@
 - platform: bt_smarthub
   host: 192.168.1.254
-  interval_seconds: 30
+  interval_seconds: 15
+  consider_home: 300
   new_device_defaults:
     track_new_devices: false
 - platform: google_maps
