--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,6 +1,9 @@
 # Configure a default setup of Home Assistant (frontend, api, etc)
 default_config:
 
+logger:
+  default: info
+  
 frontend:
   themes: !include_dir_merge_named ./themes
   extra_module_url:
@@ -62,10 +65,10 @@ google:
   client_id: !secret google_client_id
   client_secret: !secret google_client_secret
   
-sonoff:
-  username: !secret ewelink_username
-  password: !secret ewelink_password
-  grace_period: 600
+#sonoff:
+#  username: !secret ewelink_username
+#  password: !secret ewelink_password
+#  grace_period: 600
   
 tuya: 
   username: !secret tuya_username
@@ -75,9 +78,8 @@ tuya:
 
 homeassistant:
   customize: !include customize.yaml
-  name: Home
   unit_system: metric
-  whitelist_external_dirs:
+  allowlist_external_dirs:
     - /tmp
     - /config/www/cams
 
@@ -105,6 +107,10 @@ android_ip_webcam:
       - whitebalance_lock
       - video_recording
 
+camera:
+  - platform: local_file
+    file_path: /config/www/cams/cam1.jpg
+    name: esp32cam_lastimage
 ifttt:
   key:
     tom: !secret tom_ifttt
