--- a/esphome/esp32cam_one.yaml
+++ b/esphome/esp32cam_one.yaml
@@ -2,7 +2,15 @@ esphome:
   name: esp32cam_one
   platform: ESP32
   board: esp-wrover-kit
-
+  on_boot:
+    - switch.template.publish:
+        id: esp32_status
+        state: ON
+  on_shutdown:
+    - switch.template.publish:
+        id: esp32_status
+        state: OFF
+      
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
@@ -34,6 +42,14 @@ light:
     name: "esp32cam_one flash"
     output: flash_led
 
+deep_sleep:
+  run_duration: 1min
+  sleep_duration: 5min
+    
+switch:
+  - platform: template
+    name: "ESP32Cam Status"
+    id: esp32_status
     
 esp32_camera:
   name: esp32cam_one
@@ -50,4 +66,5 @@ esp32_camera:
   power_down_pin: GPIO32
   resolution: 1024x768
   jpeg_quality: 20
-  max_framerate: 2 fps
+  max_framerate: 1 fps
+
