--- a/automations.yaml
+++ b/automations.yaml
@@ -19,7 +19,7 @@
     event_type: ifttt_webhook_received
     platform: event
   action:
-  - data_template:
+  - data:
       entity_id: '{{ trigger.event.data.entity_id }}'
     service_template: '{{ trigger.event.data.service }}'
 - id: '1576537003318'
@@ -31,7 +31,7 @@
     event_type: ifttt_webhook_received
   action:
   - service_template: '{{ trigger.event.data.service }}'
-    data_template:
+    data:
       brightness: '{{ trigger.event.data.brightness }}'
       effect: '{{ trigger.event.data.effect }}'
       entity_id: '{{ trigger.event.data.entity_id }}'
@@ -46,7 +46,7 @@
   condition: []
   action:
   - service_template: '{{ trigger.event.data.service }}'
-    data_template:
+    data:
       method: '{{ trigger.event.data.method }}'
 - id: '1576675828079'
   alias: Presence - Nobody home
@@ -76,7 +76,7 @@
     state: 'on'
   action:
   - service: telegram_bot.send_message
-    data_template:
+    data:
       inline_keyboard:
       - Turn off:/off
       target:
@@ -97,7 +97,7 @@
   condition: []
   action:
   - service: telegram_bot.send_message
-    data_template:
+    data:
       inline_keyboard:
       - Turn off:/off
       target:
@@ -141,11 +141,12 @@
     to: home
   condition: []
   action:
-  - data_template:
+  - data:
       message: "{%- for person in states.group.all_persons.attributes.entity_id -%}\n\
         \  {%- if is_state(person, 'home') -%} \n    {{ state_attr(person, 'friendly_name')\
         \ }} just arrived home\n  {%- endif -%}\n{%- endfor -%} \n"
     service: notify.telegram_td
+  mode: single
 - id: '1576773914306'
   alias: Telegram /off
   description: Respond to a manually typed Telegram message of "/off" (using telegram_command)
@@ -171,7 +172,7 @@
       entity_id: switch.christmas_star
     service: switch.turn_off
   - service: telegram_bot.send_message
-    data_template:
+    data:
       target:
       - '{{ states(''input_text.telegram_td'') }}'
       - '{{ states(''input_text.telegram_ad'') }}'
@@ -224,7 +225,7 @@
     condition: time
   action:
   - service: telegram_bot.send_message
-    data_template:
+    data:
       target:
       - '{{ states(''input_text.telegram_td'') }}'
       - '{{ states(''input_text.telegram_ad'') }}'
@@ -240,7 +241,7 @@
   condition: []
   action:
   - delay: 00:00:30
-  - data_template:
+  - data:
       message: Hello Tom, {{ states('sensor.compliment') }}
     entity_id: media_player.hallway_home
     service: tts.google_translate_say
@@ -368,12 +369,12 @@
     platform: time_pattern
   condition: []
   action:
-  - data_template:
+  - data:
       entity_id: media_player.living_room_display
       message: The washing machine finished {{relative_time(states.binary_sensor.washer.last_changed)
         }} ago, please hang out the washing
     service: tts.google_translate_say
-  - data_template:
+  - data:
       inline_keyboard:
       - Washer Emptied:/washer_emptied
       message: 🧺 The washing machine finished {{ relative_time(states.binary_sensor.washer.last_changed)
@@ -395,7 +396,7 @@
   action:
   - entity_id: automation.washer_notify_done
     service: automation.turn_on
-  - data_template:
+  - data:
       inline_keyboard:
       - Washer Emptied:/washer_emptied
       message: 🧺 The washing machine has finished, please hang out the washing
@@ -424,7 +425,7 @@
   action:
   - entity_id: automation.washer_notify_done
     service: automation.turn_off
-  - data_template:
+  - data:
       message: 'Great! The forecast for today is: {{ state_attr(''weather.millview'',
         ''temperature'') }}°C, {{ states(''weather.millview'')}}. Wind speed is {{
         state_attr(''weather.millview'', ''wind_speed'') }}km/h.'
@@ -432,6 +433,7 @@
       - '{{ states(''input_text.telegram_td'') }}'
       - '{{ states(''input_text.telegram_ad'') }}'
     service: telegram_bot.send_message
+  mode: single
 - id: '1582057191428'
   alias: Printer - Telegram command
   description: Respond to */print* Telegram command with stats about 3D printer
@@ -446,7 +448,7 @@
     platform: event
   condition: []
   action:
-  - data_template:
+  - data:
       message: "Status: {{ states('sensor.printer_current_state') }}  \nElapsed: {%-\
         \ if states('sensor.printer_time_elapsed') |int > 3600 -%} {{ states('sensor.printer_time_elapsed')\
         \  | multiply(0.0002777778) | round(2)}}h {%- else %} {{ states('sensor.printer_time_elapsed')}}m\
@@ -532,24 +534,31 @@
     service: switch.turn_off
 - id: '1588449990654'
   alias: 'Garage: Notification (repeat)'
-  description: ''
+  description: At 15 min intervals (as long as > 10 mins since door opened) send a
+    reminder notification
   trigger:
   - minutes: /15
     platform: time_pattern
-  condition: []
+  condition:
+  - condition: template
+    value_template: '{{ as_timestamp(now()) - as_timestamp(states.binary_sensor.garage_door.last_changed)
+      > 10*60 }}'
   action:
-  - data_template:
-      entity_id: media_player.living_room_display
+  - data:
+      entity_id:
+      - media_player.living_room_display
+      - media_player.hallway_home
       message: The garage door was opened {{ relative_time(states.binary_sensor.garage_door.last_changed)
         }} ago
     service: tts.google_translate_say
-  - data_template:
+  - data:
       message: The garage door was opened {{ relative_time(states.binary_sensor.garage_door.last_changed)
         }} ago
       target:
       - '{{ states(''input_text.telegram_td'') }}'
       - '{{ states(''input_text.telegram_ad'') }}'
     service: telegram_bot.send_message
+  mode: single
 - id: '1588450174191'
   alias: 'Garage: Open'
   description: ''
@@ -561,7 +570,7 @@
     domain: binary_sensor
   condition: []
   action:
-  - data_template:
+  - data:
       message: The garage door was opened
       target:
       - '{{ states(''input_text.telegram_td'') }}'
@@ -570,7 +579,9 @@
     entity_id: automation.garage_notification_repeat
     service: automation.turn_on
   - data:
-      entity_id: media_player.living_room_display
+      entity_id:
+      - media_player.living_room_display
+      - media_player.hallway_home
       message: The garage door was opened
     service: tts.google_translate_say
   mode: single
@@ -585,7 +596,7 @@
     domain: binary_sensor
   condition: []
   action:
-  - data_template:
+  - data:
       message: The garage door was closed
       target:
       - '{{ states(''input_text.telegram_td'') }}'
@@ -595,7 +606,9 @@
     entity_id: automation.garage_notification_repeat
     service: automation.turn_off
   - data:
-      entity_id: media_player.living_room_display
+      entity_id:
+      - media_player.living_room_display
+      - media_player.hallway_home
       message: The garage door was closed
     service: tts.google_translate_say
   mode: single
@@ -606,11 +619,13 @@
   - entity_id: media_player.kodi
     platform: state
     to: 'off'
+    for: 00:00:30
   condition: []
   action:
   - delay: 00:00:15
   - entity_id: switch.kodi
     service: switch.turn_off
+  mode: single
 - id: '1590597141876'
   alias: 'Lights: Turn off Seb''s light if no motion'
   description: ''
@@ -689,23 +704,6 @@
       filename: /config/www/cams/ipcam_{{ states('sensor.date') }}.jpg
     service: camera.snapshot
   mode: single
-- id: '1600250519288'
-  alias: 'Daily camera: low battery notification'
-  description: ''
-  trigger:
-  - below: '25'
-    entity_id: sensor.ip_webcam_battery_level
-    for: 00:10:00
-    platform: numeric_state
-  condition: []
-  action:
-  - data_template:
-      message: 🔌 Timelapse camera battery level is {{ states('sensor.ip_webcam_battery_level')
-        }}. Please charge the battery.
-      target:
-      - '{{ states(''input_text.telegram_td'') }}'
-    service: telegram_bot.send_message
-  mode: single
 - id: '1600335652412'
   alias: ESP32 Cam timelapse
   description: ''
@@ -741,13 +739,8 @@
   mode: single
   variables:
     media_players:
-      89cc5e46faabf3c0: media_player.bedroom_2_speaker
-      c5757012c81cab45: media_player.bedroom_2_speaker
-      8962aa07fab811eabbaa4f7d3fc96ef8: media_player.bedroom_2_speaker
-      52db5770030511eb9ca2a50c8617140c: media_player.bedroom_2_speaker
-      21fd883f035711ebbba9252d8c7373db: media_player.bedroom_2_speaker
-      1fe6e09e6e8b47f2999d61c76e413a8b: media_player.living_room_display
-      035c659903d911ebb6040b6f864e36ee: media_player.kitchen_chromecast
+      e4fe6e4208d711eb87685b946672c241: media_player.kitchen_chromecast
+      c3bd660708d811ebac3afd455d849421: media_player.reuben_s_room_speaker
     tags:
       04-2F-8B-FA-90-49-81:
         media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FqBdQcfPIY4UJfmVC4mqj%2Frecordings%2FBZFoJspmw9K9IwlQMz8J%2Frecordings%2Faudio.mp3?alt=media&token=f46db5de-43c6-4283-9e61-1397aa1ac46d
@@ -767,6 +760,36 @@
       87-61-95-5F:
         media_content_id: https://www.dropbox.com/s/uowksapxv8nb8se/08%20-%20Come%20What%20May.mp3?dl=1
         media_content_type: music
+      04-0F-81-FA-90-49-81:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FGH4ZnxM7M8oxbVZEmV4T%2Frecordings%2FOZljR1hXy7orkCBrha9f%2Frecordings%2Faudio.mp3?alt=media&token=9d6f367f-4521-4e0b-9b7d-66500f2ef836
+        media_content_type: music
+      04-1B-81-FA-90-49-81:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FZTe10kJMfXgNaiSCsStC%2Frecordings%2FKksLQS6LUXWLrBbtDusZ%2Frecordings%2Faudio.mp3?alt=media&token=46232d75-e430-4b11-a532-4185a96a34dd
+        media_content_type: music
+      04-27-81-FA-90-49-81:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F0CSxJ7wAn8p7s6adeqAx%2Frecordings%2F82kgp14YF6iJtU77IaSd%2Frecordings%2Faudio.mp3?alt=media&token=68bdd707-2f64-47a6-9887-8b86dd6b73d4
+        media_content_type: music
+      04-21-81-FA-90-49-81:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FvGG2EXQ9sp2HOS9f74UB%2Frecordings%2FfKgkUvjMMQZYIM5XT2Wd%2Frecordings%2Faudio.mp3?alt=media&token=096ef499-c35d-44fa-a9eb-2c9ca5cb9ec0
+        media_content_type: music
+      04-7E-6E-62-90-6B-80:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FEfVUE7f9cD3ggPOJG3WG%2Frecordings%2F5YLWhtixOsEX4ju064js%2Frecordings%2Faudio.mp3?alt=media&token=60cd78ce-af61-4982-86b7-604a6ddf7985
+        media_content_type: music
+      04-15-81-FA-90-49-81:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FQkcZLdHAK2DgO8L8FDgG%2Frecordings%2FDGc9pUmUPbzHwhAvImCc%2Frecordings%2Faudio.mp3?alt=media&token=2e7a5558-c610-44d8-b03f-534e0b1f2a24
+        media_content_type: music
+      04-82-6E-62-90-6B-80:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F6aOQWFLcP8N40QSpBiVL%2Frecordings%2Frxu1QkpPKd9wYwX2094m%2Frecordings%2Faudio.mp3?alt=media&token=964f2092-cd0d-4f29-a0f9-cbd1cc3670a3
+        media_content_type: music
+      04-64-7F-62-EC-6B-81:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FWAmgOrvRTRaoApufBwFJ%2Frecordings%2F8OwDv4WuCySO2j6tBAkd%2Frecordings%2Faudio.mp3?alt=media&token=b34ac6ea-9052-4a30-9f86-788f7a39e438
+        media_content_type: music
+      04-68-7F-62-EC-6B-81:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2FtfRd0ncTBChvgHQM0jjk%2Frecordings%2Fa7VgLNATEVtB6P3avoE3%2Frecordings%2Faudio.mp3?alt=media&token=5cdd84c4-2930-4bec-bfd2-e48cc8d579a6
+        media_content_type: music
+      04-7A-6E-62-90-6B-80:
+        media_content_id: https://firebasestorage.googleapis.com/v0/b/storytime-7c623.appspot.com/o/stories%2F6WD7fy4W11bVKV2Gd8o9%2Frecordings%2FCToJUbTb6lN9gitTkCNd%2Frecordings%2Faudio.mp3?alt=media&token=065cf49f-b8bc-4ba3-9cb4-304d2ebd64ff
+        media_content_type: music
   trigger:
     platform: event
     event_type: tag_scanned
@@ -784,3 +807,36 @@
       media_content_id: '{{ media_content_id }}'
       media_content_type: '{{ media_content_type }}'
   - delay: 5
+- id: '1602617983905'
+  alias: 'Zoom: Notify start/end call'
+  description: ''
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.zoom_tomBJSS
+  condition: []
+  action:
+  - variables:
+      zoom_status: empty
+  - choose:
+    - conditions:
+      - condition: state
+        entity_id: binary_sensor.zoom_tomBJSS
+        state: 'on'
+      sequence:
+      - service: tts.google_translate_say
+        data:
+          message: Tom has started a zoom meeting
+        entity_id: media_player.bedroom_2_speaker
+    - conditions:
+      - condition: state
+        entity_id: binary_sensor.zoom_tomBJSS
+        state: 'off'
+      sequence:
+      - service: tts.google_translate_say
+        data:
+          message: Tom has ended a zoom meeting
+        entity_id: media_player.bedroom_2_speaker
+  - delay:
+      seconds: 10
+  mode: single
